# cirtesub_bringup

./: README.md  package.xml  setup.cfg  setup.py
config/: plotjuggler_debug.xml  ros2_control_params.yaml  ros2_control_params_dual_alpha.yaml
launch/: bringup.launch.py  bringup_dual_alpha.launch.py
